# finvap_uat

./: .gitignore  FinVAP_UAT_Guide.md  README.md  pyproject.toml
docs/: GVM-SETUP.md  SCORING.md  TEMPLATES.md  USAGE.md  WEBUI.md
finvap/: __init__.py  audit.py  cli.py  config.py  db.py  doctor.py  editing.py  engagement.py  ingest.py  maintenance.py  migrate.py  models.py  orchestrator.py  projects.py  samples.py  settings.py
finvap/compliance/: __init__.py  mapping.py  regulations.py  rerank.py  store.py
finvap/reporting/: __init__.py  _soffice_convert.py  deadlines.py  docx_template.py  masking.py  prose.py  providers.py
finvap/risk/: __init__.py  convert.py  engine.py  metrics.py  nvd.py
finvap/samples/: sample-assessment-dc1.db  sample-assessment-dc1.meta.json
finvap/scanners/: base.py  gvm_scanner.py  nessus_importer.py  nmap_scanner.py
finvap/web/: __init__.py  app.py  jobs.py  server.py
finvap/web/static/css/: finvap.css
finvap/web/static/js/: cvss_page.js  cvss_v31.js  cvss_v4.js  finvap.js
finvap/web/templates/: _api_keys.html  _banner.html  _finding_body.html  _findings_table.html  _job.html  _model_select.html  _progress.html  _recompute_result.html  _report_result.html  _rescore_result.html  _risk_model_form.html  _setup_result.html  base.html  cvss.html  dashboard.html  finding_detail.html  log_detail.html  logs.html  projects.html  report.html  risk_model.html  setup.html
templates/: VA Template.docx
tests/: conftest.py  test_audit.py  test_compliance.py  test_doctor.py  test_editing.py  test_gvm_parser.py  test_maintenance.py  test_migrate.py  test_nessus_importer.py  test_orchestrator.py  test_projects.py  test_reporting.py  test_rerank.py  test_risk_scoring.py  test_settings.py  test_templates.py  test_web.py
tests/fixtures/: gvm_metasploitable.xml  nessus_sample.nessus
